--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,10 @@
 version: '3.7'
 
 services:
-  bunbot:
+  shoutoutbot:
     build: .
-    image: bunbot
-    container_name: bunbot
+    image: shoutoutnot
+    container_name: shoutoutbot
     command: pipenv run python bot.py
     volumes:
       - ./.env:/usr/app/.env
